changed flexbox code

--- a/index.html
+++ b/index.html
@@ -9,24 +9,21 @@
 <link rel="stylesheet" href="styles/main.css">
 <body>
     <header>
-        <title>Martin's Aquarium</title>
+        <h1>Martin's Aquarium</h1>
     </header>
-    <main>
-        <head>
-            <h1>Martin's Aquarium</h1>
-        </head>
-    <article class="content">
+    <main class="content">
             <article class="fishlist">
                 <section class="fishOwned">xyz</section>
                 <section class="comments">comments</section>
                 <section class="locations">locations</section>
             </article>
-    </main>
+    
     <aside>
         <article class="tips">
-            <section class="advices">tips</section>
+            <section class="advices">tips
+            </section>
         </article>
     </aside>
-    </article>
+    </main>
 </body>
 </html>
